# kestrel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml
bot/: Cargo.toml
bot/kestrel/: Cargo.toml
bot/kestrel/src/: access_list.rs  binary_search.rs  builders.rs  cascade_model.rs  chain_config.rs  competitor_tracker.rs  controls.rs  dex_monitor.rs  gas_budget.rs  main.rs  metrics_ws.rs  nonce_manager.rs  persistent_store.rs  pool_depth_model.rs  pre_sign.rs  prometheus_exporter.rs  rate_cache.rs  simulate.rs  speculative_cache.rs  spread_pipeline.rs  ssr_monitor.rs
bot/kestrel/src/oracle/: chainlink.rs  mod.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployStrategies.s.sol
contracts/src/: KestrelArbitrageur.sol  KestrelFlashMintArbitrageur.sol  KestrelSusdeArbitrageur.sol  KestrelTimelock.sol
contracts/src/interfaces/: IBalancerVault.sol  ICurvePool.sol
contracts/test/: KestrelArbitrageur.t.sol  KestrelArbitrageurExtended.t.sol  KestrelFlashMintArbitrageur.t.sol  KestrelSusdeArbitrageur.t.sol  KestrelTimelock.t.sol
dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/api/control/: route.ts
dashboard/app/api/metrics/: route.ts
dashboard/app/controls/: page.tsx
dashboard/app/execution/: layout.tsx  page.tsx
dashboard/app/pools/: layout.tsx  page.tsx
dashboard/components/: BuilderTable.tsx  LatencyBar.tsx  ProfitChart.tsx  Sidebar.tsx  SpreadBadge.tsx  StatCard.tsx  Toaster.tsx  WsProvider.tsx
dashboard/store/: botStore.ts
infra/: nginx.conf  reth.toml
infra/wireguard/: client.conf.example  setup.sh  wg0.conf.example
