[package]
name    = "kestrel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
# C4: pinned to the alloy 0.3 API the codebase is written against
# (on_ws / on_ipc / PubSubFrontend / subscribe_blocks). Do not bump without
# migrating every call site — see the design notes.
alloy              = { version = "0.3", features = ["full", "pubsub", "rpc-types", "signer-local", "node-bindings"] }
# H1: alloydb (not ethersdb) — the simulation forks state from an alloy provider.
revm               = { version = "14",  features = ["alloydb"] }
tokio              = { version = "1",   features = ["full"] }
futures            = "0.3"
dashmap            = "5"
simd-json          = "0.13"
eyre               = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# C1: reqwest 0.12 — 0.11 has no `http2` feature. See the review.
reqwest            = { version = "0.12", features = ["json", "http2", "stream"] }
hex                = "0.4"
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
prometheus         = "0.13"
tokio-tungstenite  = { version = "0.21", features = ["native-tls"] }
futures-util       = "0.3"
ed25519-dalek      = { version = "2", features = ["rand_core"] }
chrono             = { version = "0.4", features = ["serde"] }
rayon              = "1.10"
num_cpus           = "1"
once_cell          = "1"
tokio-stream       = "0.1"
# secrecy — zeroes private key material on drop, redacts from logs/panics
secrecy            = { version = "0.8", features = ["alloc"] }
# rusqlite — lightweight persistent store for builder stats
rusqlite           = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
